--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,14 @@
-[[redirects]]
-  from = "/api/*"
-  to = "https://your-api.onrender.com/:splat"
-  status = 200
-  force = true
+[build]
+  command = "npm run build"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
