--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 VITE_STRIPE_PUBLISHABLE_KEY=pk_xxx_replace_me
-VITE_API_BASE=https://replace-with-your-backend-url
+VITE_API_BASE=https://server-t35l.onrender.com
