--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^8.0.0",
     "axios": "^1.12.2",
     "install": "^0.13.0",
+    "lucide-react": "^0.545.0",
     "npm": "^11.6.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
